--- a/client/src/css/Alumni.css
+++ b/client/src/css/Alumni.css
@@ -1,8 +1,8 @@
-@import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,600,700,300,200);
+@import url("https://fonts.googleapis.com/css?family=Titillium+Web:400,600,700,300,200");
 
-@import url(https://fonts.googleapis.com/css?family=Croissant+One);
+@import url("https://fonts.googleapis.com/css?family=Croissant+One");
 
-@import url(https://fonts.googleapis.com/css?family=Poiret+One);
+@import url("https://fonts.googleapis.com/css?family=Poiret+One");
 
 @import url("https://fonts.googleapis.com/css?family=Caveat|Righteous&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
@@ -35,6 +35,7 @@
 
 .titleBolda {
   font-weight: 600;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";;
 }
 .pageTitlea {
   text-transform: uppercase;
