--- a/client/src/css/Contact.css
+++ b/client/src/css/Contact.css
@@ -60,7 +60,7 @@
 }
 
 .headingc {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     color: #f6f7ff;
     font-size: 30px;
