--- a/client/src/css/Alumni.css
+++ b/client/src/css/Alumni.css
@@ -59,16 +59,11 @@
   transition: transform 400ms ease-in;
 }
 
-.card-item img {
+.card-item .card-img-top {
   transform: none !important;
   transition: none !important;
   height: 18rem !important;
 }
-
-/* .card-item:hover {
-  transition: transform 400ms ease-out;
-  transform: scale(1.15);
-} */
 
 .panel-title a {
   color: red;
@@ -121,4 +116,13 @@
 }
 .panel-heading .accordion-toggle.collapsed:after {
   content: "\f054";
+}
+
+@media only screen and (max-width: 500px) {
+  .collaborate p {
+    font-size: small;
+  }
+  .quote {
+    font-size: medium !important;
+  }
 }
