--- a/client/src/css/Sponsor.css
+++ b/client/src/css/Sponsor.css
@@ -1,82 +1,78 @@
 .sponsors .icon-box {
-    text-align: center;
-    border: 1px solid #ebebeb;
-    padding: 80px 20px;
-    transition: all ease-in-out 0.3s;
-    background: #fff;
+  text-align: center;
+  border: 1px solid #ebebeb;
+  padding: 80px 20px;
+  transition: all ease-in-out 0.3s;
+  background: #fff;
 }
-.c1{
-    width: 22rem;
-     height:35rem; 
+.c1 {
+  width: 22rem;
+  height: 35rem;
 }
-.sponimg{
-    width: auto;
-     height:12rem;
-      align-items:center;
-       padding:5px;
+.sponimg {
+  width: auto;
+  height: 12rem;
+  align-items: center;
+  padding: 5px;
 }
-.sponabt{
-    text-decoration:none;
-    font-size:1.8rem; 
-    color:rgb(204, 67, 67);
+.sponabt {
+  text-decoration: none;
+  font-size: 1.8rem;
+  color: rgb(204, 67, 67);
 }
-.sponabt:hover{
-    text-decoration:none;
-    /* font-size:1.2rem;  */
-    color:rgb(204, 67, 67);
+.sponabt:hover {
+  text-decoration: none;
+  /* font-size:1.2rem;  */
+  color: rgb(204, 67, 67);
 }
 .card-item img {
-    transform: none !important;
-    transition: none !important;
-    height: 10rem;
+  transform: none !important;
+  transition: none !important;
+  height: 10rem;
 }
 /* .img-wrappers {
     width: 20%;
     height: 20%;
     padding: 5px;
   } */
-  
-  @media screen and (max-width:1000px) 
-  {
 
-    .sponabt{
-        /* text-decoration:none; */
-        font-size:1.2rem; 
-        color:rgb(204, 67, 67);
-    }
-    .sponabt:hover{
-        text-decoration:none;
-        transition: transform 400ms ease-in; 
-        color:rgb(204, 67, 67);
-    }
-    .card-item img {
-        transform: none !important;
-        transition: none !important;
-        height: 7rem;
-    }
-      .sponimg{
-          width: auto;
-          height: 7rem;
-      }
-
-      .c1{
-        margin:1rem;
-        height: 13rem;
-      }    
-
-      .txt{
-          display: none;
-      }
-      .img-wrappers {
-        /* width: 80%; */
-        margin-left: 5rem;
-        margin-right: 5rem;
-      }
-      .card-body {
-        flex: 1 1 auto;
-        height: auto;
-        padding: 1rem;
-    }
-
+@media screen and (max-width: 1000px) {
+  .sponabt {
+    /* text-decoration:none; */
+    font-size: 1.2rem;
+    color: rgb(204, 67, 67);
   }
-  
+  .sponabt:hover {
+    text-decoration: none;
+    transition: transform 400ms ease-in;
+    color: rgb(204, 67, 67);
+  }
+  .card-item img {
+    transform: none !important;
+    transition: none !important;
+    height: 7rem;
+  }
+  .sponimg {
+    width: auto;
+    height: 7rem;
+  }
+
+  .c1 {
+    margin: 1rem;
+    height: 13rem;
+  }
+
+  .txt {
+    display: none;
+  }
+  .img-wrappers {
+    /* width: 80%; */
+    margin-left: 5rem;
+    margin-right: 5rem;
+  }
+  .card-body {
+    flex: 1 1 auto;
+    height: auto;
+    padding: 1rem;
+  }
+}
