--- a/client/src/css/Alumni.css
+++ b/client/src/css/Alumni.css
@@ -59,16 +59,13 @@
   transition: transform 400ms ease-in;
 }
 
-.card-item img {
+.card-img-top{
   transform: none !important;
   transition: none !important;
   height: 18rem !important;
 }
 
-/* .card-item:hover {
-  transition: transform 400ms ease-out;
-  transform: scale(1.15);
-} */
+
 
 .panel-title a {
   color: red;
