landing page image

--- a/client/src/css/Landing.css
+++ b/client/src/css/Landing.css
@@ -11,7 +11,7 @@
   width: 100%;
   margin: 0vh 0vw;
 
-  background: url("../images/utils/drone-1.jpg") center center no-repeat;
+  background: url("../images/utils/banner1.jpg") center center no-repeat;
   background-size: cover;
   padding-bottom: 0px;
   background-attachment: fixed;
