completed Avishkar and Prosang Page

--- a/client/src/css/About.css
+++ b/client/src/css/About.css
@@ -56,8 +56,8 @@ body{
   }
 
   .abttxt{
-      text-align: center;
-      align-items: center;
+      text-align: justify;
+      /* align-items: center; */
   }
   
   @media (max-width: 640px) {
