--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -71,22 +71,34 @@
 
 @media (max-width: 1050px) {
   .right-btn {
-    margin-right: 1rem !important;
+    margin-left: 1rem !important;
+  }
+  .dropdown .dropdown-menu {
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -ms-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    transition: all 0.4s;
+    
+    max-height: 0;
+    display: block;
+    overflow: hidden;
+    opacity: 0;
   }
 }
 
-.dropdown .dropdown-menu {
+/* .dropdown .dropdown-menu {
   -webkit-transition: all 0.4s;
   -moz-transition: all 0.4s;
   -ms-transition: all 0.4s;
   -o-transition: all 0.4s;
   transition: all 0.4s;
 
-  max-height: 0;
+  max-height: auto;
   display: block;
   overflow: hidden;
   opacity: 0;
-}
+} */
 
 .logoimg {
   height: 50px;
