--- a/client/src/css/About.css
+++ b/client/src/css/About.css
@@ -55,9 +55,14 @@ body{
     background-position:center center;
   }
 
+  .about-image{
+    background: url('../images/utils/about.jpg') center center no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+
   .abttxt{
       text-align: justify;
-      /* align-items: center; */
   }
   
   @media (max-width: 640px) {
@@ -72,7 +77,6 @@ body{
       order:0;
     }
     .col-image{
-        /* display: flex; */
         height: 5em;
     }
 
