--- a/client/src/css/Landing.css
+++ b/client/src/css/Landing.css
@@ -10,71 +10,36 @@
   height: 90vh;
   width: 100%;
   margin: 0vh 0vw;
-
-  background: url("../images/utils/banner1.jpg") center center no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0,0,0,0.4)), url("../images/utils/drone-1.jpg") center center no-repeat;
   background-size: cover;
   padding-bottom: 0px;
   background-attachment: fixed;
-
-  background-color: #eee;
   background-position: center;
 }
-
-.overlayl {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  top: 0px;
-  left: 0px;
-  padding-bottom: 80px;
-  color: white;
-  background-color: rgba(37, 37, 37, 0.637);
-}
-
 .rempad {
   padding: 0 0;
 }
 
 .landing {
   height: 90vh;
-  width: 100%;
   margin: 0vh 0vw;
-  margin: 0vh 0vw;
+  margin-left: 5rem;
   position: relative;
   color: white;
   text-shadow: 5px 2px 2px rgb(41, 41, 41);
 }
 
 .landing-logo {
-  height: 14rem;
+  height: 8rem;
   position: relative;
-  left: 5rem;
-}
-
-@media (max-width: 1050px) {
-  .landing-logo {
-    right: 0;
-  }
-  .landing-about {
-    margin-top: 3rem;
-    text-align: center;
-  }
-}
-@media (max-width: 992px) {
-  .landing {
-    height: 70vh;
-  }
-  .landing-logo {
-    left: 0;
-    margin-top: 4rem;
-  }
+  right: 2rem;
 }
 @media (max-width: 770px) {
   .landing {
-    height: 55vh;
+    height: 70vh !important;
   }
   .landing-logo {
-    height: 10rem;
+    height: 6rem;
     width: auto;
     padding-right: 4px;
   }
@@ -88,11 +53,16 @@
 }
 @media (max-width: 400px) {
   .landing {
-    height: 50vh;
+    height: 70vh;
+    flex-direction: column ;
+    justify-content: center !important;
+    align-items: center !important;
+    margin: 0 !important;
   }
   .landing-logo {
-    height: 8.5rem;
+    height: 6rem;
     width: auto;
+    right: 0;
   }
   .landing-about h1 {
     font-size: 1.5rem;
