--- a/client/src/css/Spinoff.css
+++ b/client/src/css/Spinoff.css
@@ -1,6 +1,9 @@
 @media only screen and (max-width:660px)
 {
-    .spinoff .content p ,a{
+    .spinoff .content p{
+        font-size: small;
+    }
+    .spinoff .content a{
         font-size: small;
     }
     .spinoff .content h4{
