--- a/client/src/css/About.css
+++ b/client/src/css/About.css
@@ -82,7 +82,7 @@ body{
 
     .col-text div p {
         font-size: small;
-        text-align: center;
+        text-align: justify;
       }
     .col-left {
       -webkit-box-ordinal-group:0;
