spinoff complete and UI changes

--- a/client/src/css/ResearchThemes.css
+++ b/client/src/css/ResearchThemes.css
@@ -7,6 +7,15 @@
     }
 .card-text {
     font-size: small;
+    font-family: "Roboto";
     /* text-align: center; */
 }
+}
+
+.card-text {
+    font-family: "Roboto";
+}
+
+.card-body:hover {
+    background-color: rgb(77, 77, 77);
 }
