--- a/client/src/css/Landing.css
+++ b/client/src/css/Landing.css
@@ -19,6 +19,12 @@
 .rempad {
   padding: 0 0;
 }
+/* 
+.logoback{
+  background-color: rgba(255,255,255, 0.4);
+  padding: 1rem 1rem 1rem 3rem;
+  border-radius: 10px;
+} */
 
 .landing {
   height: 90vh;
