--- a/client/src/css/featured-proj.css
+++ b/client/src/css/featured-proj.css
@@ -102,7 +102,8 @@ img {
   overflow: hidden;
 }
 .cards_item:hover {
-  transform: scale(1.15);
+  transform: scale(1.08);
+  transition: transform 400ms ease-out;
 }
 
 .btns {
