--- a/client/src/css/featured-proj.css
+++ b/client/src/css/featured-proj.css
@@ -89,7 +89,7 @@
 
 img {
   /* display: block; */
-  height: 35vh;
+  /* height: 35vh; */
   max-height: 100%;
   max-width: 100%;
   vertical-align: middle;
@@ -101,6 +101,24 @@ img {
   position: relative;
   overflow: hidden;
 }
+
+.evavishkar{
+  height: 30vh;
+}
+
+.evavishkar:hover {
+  transform:scale(1.5);
+  -ms-transform:scale(1.5); /* IE 9 */
+  -moz-transform:scale(1.5); /* Firefox */
+  -webkit-transform:scale(1.5); /* Safari and Chrome */
+  -o-transform:scale(1.5); /* Opera */
+}
+
+.card_image {
+  display: inline-block; /* change the default display type to inline-block */
+  overflow: hidden;      /* hide the overflow */
+}
+
 .cards_item:hover {
   transform: scale(1.08);
   transition: transform 400ms ease-out;
@@ -161,6 +179,7 @@ img {
 }
 
 .card_content {
+  height: 20vh;
   padding: 1rem;
   background: transparent;
   /* background: linear-gradient(to left, rgb(51, 60, 97), #d1d1d1 100%); */
