--- a/client/src/css/About.css
+++ b/client/src/css/About.css
@@ -1,3 +1,5 @@
+
+
 body{
   -webkit-font-smoothing: antialiased;
 }
@@ -47,13 +49,14 @@ body{
 }
 
 .nopad{
-  padding: 0;
+  padding: 0 !important;
 }
 
 .Aligner-item {
   width: 80%;
 }
 .col-image {
+  background: url("../images/utils/banner.jpg") center center no-repeat;
   background-size: cover;
   background-position:center center;
   /* padding: 0; */
@@ -62,9 +65,12 @@ body{
 .about-image{
   background: url("../images/utils/banner.jpg") center center no-repeat;
   background-size: cover;
+  /* background-size: contain; */
+  /* background-position: center; */
   padding: 0;
-  height:30rem;
+  height:36rem;
   width: auto;
+  /* z-index: 999; */
 }
 
 .abttxt{
@@ -87,38 +93,7 @@ body{
   }
 
   .col-text div p {
-    color: rgb(255, 255, 255);
-    align-items: center;
-    justify-content: center;
-    -webkit-font-smoothing: antialiased;
-  }
-
-  .nopad{
-    padding: 0 !important;
-  }
-
-  .Aligner-item {
-    width: 80%;
-  }
-  .col-image {
-    background: url("../images/utils/banner.jpg") center center no-repeat;
-    background-size: cover;
-    background-position:center center;
-    /* padding: 0; */
-  }
-
-  .about-image{
-    background: url("../images/utils/banner.jpg") center center no-repeat;
-    background-size: cover;
-    /* background-size: contain; */
-    /* background-position: center; */
-    padding: 0;
-    height:36rem;
-    width: auto;
-    /* z-index: 999; */
-  }
-
-  .abttxt{
+      font-size: small;
       text-align: justify;
     }
   .col-left {
