--- a/client/src/css/Dashboard.css
+++ b/client/src/css/Dashboard.css
@@ -1,8 +1,8 @@
-.container{
+.dashboard .container{
     padding: 2rem 0px;
 }
 
-.card {
+.dashboard .card {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -14,7 +14,7 @@
     border-radius: .25rem;
 }
 
-.card-body {
+.dashboard .card-body {
     flex: 1 1 auto;
     min-height: 1px;
     padding: 1rem;
@@ -29,7 +29,7 @@
     padding-right: 8px;
     padding-left: 8px;
 }
-.mb-3, .my-3 {
+.dashboard .mb-3, .my-3 {
     margin-bottom: 1rem!important;
 }
 
