--- a/client/src/css/Achievements.css
+++ b/client/src/css/Achievements.css
@@ -1,16 +1,3 @@
-.achievements-container{
-    margin: 4rem auto !important;
-}
-
-.achievements-container .panel-collapse{
-    background-color: black;
-}
-
-.card-body .desc{
-    font-weight: bold;
-    font-size: x-large;
-}
-
 .team{
     font-weight: 700;
     color: red;
@@ -20,35 +7,27 @@
     color: red;
 }
 
-@media only screen and (max-width:800px)
-{
-    .card-body .desc{
-        font-weight: bold;
-        font-size: large;
-    }
-    .team{
-        font-weight: 700;
-        color: red;
-    }
-}
-@media only screen and (max-width:800px)
-{
-    .card-body .desc{
-        font-weight: bold;
-        font-size: medium;
-    }
-    .team{
-        font-size: small;
-    }
+.vertical-timeline:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 18px;
+    height: 100%;
+    width: 4px;
+    background: #000!important;
 }
 
-@media only screen and (max-width:800px)
+.achievement-title p{
+    font-size: large;
+    margin: 0;
+}
+
+@media only screen and ( max-width:500px)
 {
-    .card-body .desc{
-        font-weight: bold;
+    .achievement-title h4{
         font-size: medium;
     }
-    .team{
+    .achievement-title h5{
         font-size: small;
     }
 }
