--- a/client/src/css/SingleProject.css
+++ b/client/src/css/SingleProject.css
@@ -54,66 +54,31 @@
     padding-top: 2em;
 }
 
-
-.post-heading{
-    margin-top: 2rem;
+.iframe-container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+  }
+  
+  /* Then style the iframe to fit in the container div with full height and width */
+  .responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
 }
 
-.body
-{
-    font-size: x-large;
+.subheaders{
+    text-decoration: underline;
 }
 
-article{
-    margin: auto;
-}
-
-.body a{
-    color: #a54141 !important;
-    font-weight: 500;
-}
-
-@media only screen and (max-width:800px)
-{
-
-    #header{
-        height: 55vh;
-        padding-left: 2rem;
-    }
-    #header h1 {
-        font-size: x-large;
-    }
-    .post-heading h5{
+  @media only screen and (max-width:500px)
+  {
+      .subheaders{
         font-size: large;
-    }
-    .post-heading span{
-        font-size: smaller;
-    }
-    .body{
-        font-size: medium;
-        width: 100%;
-        /* padding-left: 4rem; */
-    }
-}
-@media (max-width:450px)
-{
-    #header{
-        height: 40vh;
-    }
-    #header h1 {
-        font-size:large;
-    }
-    .pagesp{
-        height: auto;
-    }
-    .pageTitlep{
-        padding-left: 2rem;
-        font-size: 30px;
-    }
-    .post-heading h5{
-        font-size: small;
-    }
-    .post-heading span{
-        font-size: xx-small;
-    }
-}
+      }
+  }
