--- a/client/src/css/Alumni.css
+++ b/client/src/css/Alumni.css
@@ -76,7 +76,7 @@
   font-family: Segoe, "Segoe UI", "DejaVu Sans", "Trebuchet MS", Verdana,
   sans-serif !important;
   font-size: 14px !important;
-  margin: 50px auto 0 auto !important;
+  /* margin: 50px auto 0 auto !important; */
 }
 .alumni-container .card-body{
   background-color: rgb(202, 49, 49);
@@ -127,6 +127,10 @@
   content: "\f054";
 }
 
+.alumni-container .panel-collapse{
+  background: #fdf9f9;
+}
+
 @media screen and (max-width: 619px) {
   .header {
     font-size: larger !important;
@@ -144,6 +148,9 @@
   }
   .faculty-container .side-content p{
     font-size: smaller;
+  }
+  .item-alumni{
+    margin: 3rem 0rem;
   }
 }
 
