--- a/client/src/css/testimonials.css
+++ b/client/src/css/testimonials.css
@@ -280,7 +280,43 @@
 {
   .testimonial4_slide p {
     font-size: medium;
+  
+}
+.scrollert
+{
+  /* text-align: justify ; */
+	margin-left: 15px;
+	float: left;
+	height: 170px;
+	/* width: 65px; */
+	/* background: #F5F5F5; */
+	overflow-y: scroll;
+	margin-bottom: 25px;
+}
 
+.force-overflow
+{
+	min-height: 100px;
+}
+
+#stylet-2::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+#stylet-2::-webkit-scrollbar
+{
+	width: 4px;
+	background-color: #F5F5F5;
+}
+
+#stylet-2::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: rgb(204, 67, 67);
 }
 }
 @media (max-width:400px)
