--- a/client/src/css/SingleBlog.css
+++ b/client/src/css/SingleBlog.css
@@ -34,9 +34,6 @@ article {
 }
 
 @media only screen and (max-width: 800px) {
-  #header {
-    height: 55vh;
-  }
   #header h1 {
     font-size: x-large;
   }
@@ -64,9 +61,6 @@ article {
 }
 
 @media only screen and (max-width: 450px) {
-  #header {
-    height: 40vh;
-  }
   .post-heading h5 {
     font-size: small;
   }
@@ -99,9 +93,12 @@ article {
     font-size: 0.9em;
   }
   .blog-title{
-    font-size: medium;
+    font-size: 1rem;
   }
   .postedBy-info{
     font-size:xx-small;
+  }
+  .singleblog-pagesp{
+    height: 42vh;
   }
 }
