--- a/client/src/css/Alumni.css
+++ b/client/src/css/Alumni.css
@@ -60,7 +60,7 @@
 }
 
 .panel-title a {
-  color: red;
+  color: #dc3545;
   text-decoration: none;
 }
 
@@ -121,10 +121,11 @@
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   float: right;
-  color: grey;
+  color: rgb(19, 15, 15);
 }
 .panel-heading .accordion-toggle.collapsed:after {
   content: "\f054";
+  color: rgb(212, 184, 184);
 }
 
 .alumni-container .panel-collapse{
