--- a/client/src/css/news.css
+++ b/client/src/css/news.css
@@ -1,11 +1,3 @@
-
-  
-  /* .container {
-    max-width: 960px;
-  } */
-  
-  
-  /* */
   .panel-default>.panel-heading {
     color: #333;
     background-color: #fff;
@@ -31,9 +23,9 @@
     font-style: normal;
     font-weight: 400;
     line-height: 1;
+    float: right;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    float: right;
     transition: transform .25s linear;
     -webkit-transition: -webkit-transform .25s linear;
   }
@@ -46,23 +38,26 @@
     content: "\2212";
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
+    color: rgb(212, 184, 184);
   }
   
   .panel-default>.panel-heading a[aria-expanded="false"]:after {
     content: "\002b";
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
+    color: rgb(10, 8, 8);
   }
 
   .panel-title a {
-    background: rgb(207, 67, 67);
+    background: #dc3545;
     border-radius: 15px;
     color: white;
     text-decoration: none;
 }
 
-.chcolor { 
-  background-color: #ab7979 !important;
+
+.news-container .panel-collapse{
+  background: #e4dddd;
 }
 
 .panel-default>.panel-heading a[aria-expanded="true"] {
@@ -76,16 +71,11 @@
 }
 
 .panel-collapse {
-    background: #ab7979;
     opacity: 1;
-    color: white;
+    color: black;
     padding: 10px;
     margin-bottom: 10px;
     border-bottom-left-radius: 15px;
     /* border-top-left-radius: 25px; */
     border-bottom-right-radius: 15px;
 }
-
-/* .panel-title{
-    margin-bottom: 0;
-} */
