alumni image correction

--- a/aeroclub/src/css/Sponsor.css
+++ b/aeroclub/src/css/Sponsor.css
@@ -9,6 +9,10 @@
   width: 22rem;
   height: 27rem;
 }
+
+.alumnilogowdth{
+  height: 9rem !important;
+}
 .sponimg {
   width: auto;
   height: 12rem !important;
