--- a/aeroclub/src/css/featured-proj.css
+++ b/aeroclub/src/css/featured-proj.css
@@ -35,10 +35,8 @@
 .main {
   max-width: 1400px;
   margin: 1rem auto;
-  padding: 0 3rem 2rem 3rem;
-  /* background-color: rgba(255, 0, 0, 0.144); */
   border-radius: 1.5rem;
-  /* background-size: cover; */
+  min-width: 18rem;
 }
 
 .heading {
@@ -168,6 +166,8 @@ img {
 .cards {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   list-style: none;
   margin: 0;
   padding: 0;
