--- a/aeroclub/src/css/Event.css
+++ b/aeroclub/src/css/Event.css
@@ -128,10 +128,10 @@
   text-align: justify;
 }
 
-ul {
+/* ul {
   list-style-type: none;
   padding-inline-start: 0;
-}
+} */
 
 .titleBolde {
   font-weight: 600;
