some good changes

--- a/aeroclub/src/css/Alumni.css
+++ b/aeroclub/src/css/Alumni.css
@@ -129,7 +129,7 @@
 }
 
 .alumni-container .panel-collapse{
-  background: #fdf9f9;
+  background: #fafafa;
 }
 
 @media screen and (max-width: 619px) {
