corrected the quotation hiding

--- a/aeroclub/src/css/Alumni.css
+++ b/aeroclub/src/css/Alumni.css
@@ -169,6 +169,13 @@
   .achievement div {
     font-size: small !important;
   }
+  .pageTitlea {
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 35px;
+    text-align: center;
+    padding-top: 1.7em;
+  }
 }
 
 @media only screen and (max-width: 960px){
