--- a/aeroclub/src/css/featured-proj.css
+++ b/aeroclub/src/css/featured-proj.css
@@ -106,7 +106,7 @@ img {
   font-size: 1rem !important;
 }
 .forphone3{
-  height: 6.7rem;
+  height: 5.9rem;
   font-size: 0.85rem !important;
 }
 
@@ -234,6 +234,7 @@ img {
   letter-spacing: 1px;
   text-transform: capitalize;
   margin: 0px;
+  text-align: center;
 }
 
 .card_text {
