--- a/aeroclub/src/css/Alumni.css
+++ b/aeroclub/src/css/Alumni.css
@@ -49,7 +49,11 @@
 
 
 .card-item {
-  margin: 3rem 3rem;
+  margin: 3rem 2rem;
+  transition: transform 400ms ease-in;
+}
+.card-item-1 {
+  margin: 3rem 1rem;
   transition: transform 400ms ease-in;
 }
 
@@ -79,7 +83,7 @@
   /* margin: 50px auto 0 auto !important; */
 }
 .alumni-container .card-body{
-  background-color: rgb(202, 49, 49);
+  background-color: rgb(174 21 21);
   color: white;
 }
 .alumni-container .card-body a{
