--- a/aeroclub/src/css/news.css
+++ b/aeroclub/src/css/news.css
@@ -38,18 +38,18 @@
     content: "\2212";
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
-    color: rgb(212, 184, 184);
+    color: rgb(10, 8, 8);
   }
   
   .panel-default>.panel-heading a[aria-expanded="false"]:after {
     content: "\002b";
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
-    color: rgb(10, 8, 8);
+    color: rgb(212, 184, 184);
   }
 
   .panel-title a {
-    background: #dc3545;
+    background:  #311111;
     border-radius: 15px;
     color: white;
     text-decoration: none;
@@ -62,7 +62,7 @@
 
 .panel-default>.panel-heading a[aria-expanded="true"] {
     color: rgb(228, 225, 225);
-    background-color: #311111;
+    background-color: rgb(174 21 21);
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     border-top-right-radius: 15px;
