--- a/aeroclub/src/css/Alumni.css
+++ b/aeroclub/src/css/Alumni.css
@@ -133,7 +133,7 @@
 }
 
 .alumni-container .panel-collapse{
-  background: #fafafa;
+  background: #f2f2f2;
 }
 
 @media screen and (max-width: 619px) {
