--- a/aeroclub/src/css/featured-proj.css
+++ b/aeroclub/src/css/featured-proj.css
@@ -15,7 +15,7 @@
 
 .cont {
   position: relative;
-  min-height: 33rem;
+  min-height: 85vh;
   /* background-color: rgb(240, 240, 240); */
   /* opacity: 0.4; */
 }
