another minor changer

--- a/aeroclub/src/css/featured-proj.css
+++ b/aeroclub/src/css/featured-proj.css
@@ -111,6 +111,44 @@ img {
   font-size: 0.85rem !important;
 }
 
+.scrollerproj
+{
+  /* text-align: justify ; */
+	/* margin-left: 15px; */
+	/* float: left; */
+	
+	overflow-y: auto;
+
+  scrollbar-width: thin;
+
+
+}
+
+.force-overflow
+{
+	min-height: 100px;
+}
+
+#style-401::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: transparent;
+}
+
+#style-401::-webkit-scrollbar
+{
+	width: 8px;
+	background-color: transparent;
+}
+
+#style-401::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: rgb(204, 67, 67);
+}
+
 .evavishkar{
   height: 18rem;
 }
