--- a/aeroclub/src/css/Sponsor.css
+++ b/aeroclub/src/css/Sponsor.css
@@ -57,7 +57,7 @@
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	border-radius: 10px;
-	background-color: #F5F5F5;
+	background-color: transparent;
 }
 
 #style-2::-webkit-scrollbar
